syntax = "proto3";

service Product {
    rpc getProduct (ProductId) returns (ProductDetail) {}
    rpc getProducts (ProductIds) returns (Products) {}
}

message ProductId {
    string _id = 1;
}

message ProductIds {
    repeated string _ids = 1;
}

message ProductDetail {
    string _id = 1;
    string product_name = 2;
    string product_thumb = 3;
    double product_price = 4;
    string product_type = 5;
    Shop product_shop = 6;
    repeated string product_images = 7;
}

message Products {
    repeated ProductDetail products = 1;
}
  
message Shop {
    string id = 1;
    string name = 2;
}
  
  

